funcionamiento casi perfecto word completation